# basic-game-engine

./: .clang-format  .clang-tidy  .doxygen  .editorconfig  .gitattributes  .gitignore  .gitmodules  .grazie.en.yaml  .valgrindrc  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
include/: CMakeLists.txt  abstract_engine.hxx  component.hxx  engine.hxx  engine_error.hxx  event.hxx  iengine.hxx  logger.hxx  render_object.hxx
include/apps/: abstract_application.hxx  application.h  game.h
include/apps/mvp/: application_model.hxx  application_presenter.hxx  application_view.hxx  mvp_application.hxx
include/engine/: engine.hxx  engine_factory.hxx  events.hxx  model.hxx  view.hxx  view_model.hxx
include/engine/hot-reload/: dll_reloader.h
include/engine/interface/: create.hxx  create_interfaces.hxx  interface_factory.hxx  model.hxx  presenter.hxx  view.hxx
include/engine/misc/: reload_attached_library.hxx
include/engine/renderer/: renderer.h
include/events/: events.hxx
include/glad/: glad.h
include/opengl/KHR/: khrplatform.h
include/opengl/glad/: glad.h
include/render/: abstract_declarations.hxx  abstract_renderer.hxx  abstract_triangle.hxx  abstract_vertex.hxx  declarations.hxx  itriangle.hxx  ivertex.hxx  picopng.hxx  shader.hxx  uniform.hxx  vertex.hxx
include/render/colors/: color_rgb.hxx
include/render/shaders/: gfx_program.hxx  uniform.hxx  vertex.hxx
include/render/shapes/: abstract_shape.hxx  box.hxx  indexed_shape.hxx  line_2d.hxx  polygon_2d.hxx  position_2d.hxx  shape_2d.hxx  test.hxx  triangulated_shape.hxx
include/render/textures/: abstract_file.hxx  ppm_handler.hxx  texture.hxx
include/runtime-loader/: dll_reloader.hxx
include/textures/: abstract_file.hxx  abstract_renderer.hxx  canvas.hxx  color.hxx  color_rgb.hxx  position.hxx  ppm_parser.hxx  texture_file.hxx
include/ui/: abstract_ui.h  abstract_ui.hxx
src/: CMakeLists.txt  engine.cxx  engine.hxx  gengine_core.hxx  glad.c  main.cxx
src/apps/: CMakeLists.txt  game.cxx  rotating_tor_demo.cxx
src/components/: CMakeLists.txt  game_logic.cxx  game_logic.hxx  general_components.cxx  general_components.hxx  opengl_shader.cxx  opengl_shader.hxx  opengl_texture.cxx  opengl_texture.hxx  sprite.cxx  sprite.hxx  transform.cxx  transform.hxx
src/engine/sdl/: CMakeLists.txt  application_reload.cxx  dll_reloader.cxx  model.cxx  presenter.cxx  reload.cxx  renderer.cxx  sdl_model.cxx  sdl_presenter.cxx  sdl_view.cxx  view.cxx
src/file-loader/: CMakeLists.txt  file_loading_stuff.hxx
src/game/: CMakeLists.txt  game.c  game.cxx  game.h
src/imgui/: CMakeLists.txt  imgui_component.cxx  imgui_component.hxx  imgui_engine.hxx  imgui_style.hxx  imgui_wrapper.hxx
src/imgui/backends/: imgui_impl_opengl2.h  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp
src/imgui/imgui_backends/: imgui_impl_opengl2.cpp  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdlrenderer.cpp  imgui_impl_sdlrenderer.h
src/imgui/ui/: imgui_ui.cxx  imgui_ui.hxx
src/opengl/: CMakeLists.txt  glad.c  open_gl_shader.hxx  opengl_functions.cxx  opengl_functions.hxx  opengl_texture.cxx  opengl_texture.hxx
src/opengl/KHR/: khrplatform.h
src/opengl/glad/: glad.h
src/render/: renderer.hxx
src/render/colors/: color_rgb.cxx  color_rgb.hxx
src/render/shaders/: gfx_program.hxx  test_shader.hxx  uniform.hxx
src/render/shapes/: abstract_shape.hxx  bounding_box.hxx  line_2d.hxx  polygon_2d.hxx  position_2d.hxx  triangulated_shape.hxx
src/render/textures/: abstract_file_handler.hxx  ppm_handler.hxx  texture.hxx
src/sdl/: CMakeLists.txt  dll_reloader.cxx  opengl_functions.cxx  opengl_functions.hxx  renderer.cxx  sdl_engine.cxx  sdl_engine.hxx  sdl_functions.cxx  sdl_functions.hxx  sdl_shader.cxx  sdl_shader.hxx  sdl_sound.cxx  sdl_sound.hxx  sdl_texture.cxx  sdl_texture.hxx
src/sdl/misc/: dll_reloader.cxx
src/sdl/render/: opengl_functions.cxx  opengl_functions.hxx  opengl_functions.ixx  shader.cxx  shader.hxx  shader_vertex.cxx  shader_vertex.hxx  vertex.cxx  vertex.hxx  vertex.ixx
src/sdl/ui/: sdl_ui.cxx  sdl_ui.hxx
src/system/: CMakeLists.txt  audio_system.cxx  audio_system.hxx  enemy_system.cxx  enemy_system.hxx  game_system.cxx  game_system.hxx  imgui_system.cxx  imgui_system.hxx  opengl_shader_initializer_system.cxx  opengl_shader_initializer_system.hxx  opengl_shader_system.cxx  opengl_shader_system.hxx  opengl_texture.cxx  opengl_texture.hxx  player_system.cxx  player_system.hxx  sdl_render_engine.cxx  sdl_render_engine.hxx  sdl_render_system.cxx  sdl_render_system.hxx  sprite_animation_system.cxx  sprite_animation_system.hxx  texture_system.cxx  texture_system.hxx  texture_type.hxx
src/system/player/: CMakeLists.txt  player.cxx  player.hxx
src/system/ui/: CMakeLists.txt  main_menu.cxx  main_menu.hxx
src/util/: CMakeLists.txt
src/util/file-loader/: CMakeLists.txt  file_loading_stuff.cxx  (+1 more)
test/: CMakeLists.txt  abstract_engine_triangle.cxx  complex_light_shader.cxx  draw_line.cxx  draw_polygon.cxx  engine_amazing_shader.cxx  engine_shader_compilation_runtime.cxx  engine_shader_test.cxx  imgui_general.cxx  interpolation_test.cxx  opengl_general.cxx  ppm_parser.cxx  sdl_compilation.cxx  sdl_engine.cxx  sdl_engine_implementation.cxx  sdl_engine_shader.cxx  sdl_general.cxx  sdl_opengl_shader.cxx  self_engine_triangle_shader.cxx  test_abstract_engine_triangle.cxx  test_complex_light_fragment_shader.cxx  test_engine_android.cxx  test_engine_sprite_editor.cxx  test_engine_sprite_editor_gtest.cxx  test_entt.cxx  test_imgui_engine_interaction.cxx  test_imgui_general.cxx  test_opengl_general.cxx  test_opengl_texture.cxx  test_sdl_engine.cxx  test_sdl_general.cxx  test_sdl_opengl_shader.cxx  test_sdl_sound.cxx  test_window.cxx  test_window.hxx  texture_file_test.cxx  triangulate_polygon.cxx
test/shaders/: light_figures_rgb_fragment.glsl  light_figures_rgb_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl  triangle_fragment.glsl  triangle_fragment_abstract_noise.glsl  triangle_fragment_clouds.glsl  triangle_vertex.glsl
(+104 files in other folders)
